--- a/static/css/font-faces.css
+++ b/static/css/font-faces.css
@@ -3,6 +3,7 @@
 	font-family: "FiraCode";
 	src: url("../fonts/fira_code/FiraCode-VariableFont_wght.ttf") format("truetype");
 	font-style: normal;
+	font-display: swap;
 }
 
 /*-> Major Mono Display */
@@ -10,4 +11,5 @@
 	font-family: "Major Mono Display";
 	src: url("../fonts/major_mono_display/MajorMonoDisplay-Regular.ttf") format("truetype");
 	font-style: normal;
+	font-display: swap;
 }
