--- a/static/css/app.css
+++ b/static/css/app.css
@@ -16,7 +16,7 @@ html {
     margin 0.2s ease-out,
     padding 0.2s ease-out,
     border 0.2s ease-out,
-    font-size 0.2s ease-out
+    font-size 0.2s ease-out;
 }
 
 *::selection {
@@ -42,11 +42,7 @@ img {
     width: 100%;
     height: 100%;
     display: block;
-    background: radial-gradient(
-        ellipse at left,
-        rgb(0, 19, 20),
-        transparent
-      ),
+    background: radial-gradient(ellipse at left, rgb(0, 19, 20), transparent),
       radial-gradient(ellipse at top, rgb(14, 0, 21), transparent),
       radial-gradient(ellipse at right, rgb(0, 17, 17), transparent),
       radial-gradient(ellipse at bottom, rgb(19, 0, 14), transparent);
@@ -69,7 +65,6 @@ img {
   }
 }
 
-
 .pixelated-image {
   opacity: 0%;
   position: absolute;
@@ -78,8 +73,8 @@ img {
   user-select: none;
 }
 
-.console-pane-wrapper{
-  @apply bg-[#000000bb] border rounded-md border-slate-300 flex flex-col flex-grow max-h-full overflow-y-auto hide-scrollbar;
+.console-pane-wrapper {
+  @apply bg-[#000000ef] border rounded-sm border-slate-300 flex flex-col flex-grow max-h-full overflow-y-auto hide-scrollbar;
 }
 
 .console-pane {
