--- a/static/css/app.css
+++ b/static/css/app.css
@@ -133,3 +133,16 @@ p.block-caret > span > div {
     opacity: 1;
   }
 }
+
+.appear {
+  animation: appear 1s ease-in-out forwards;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
